# Meridian

./: .env.example  .gitignore  .npmrc  ACCOUNT_SETUP_CHECKLIST.md  MILESTONE1_MANUAL_TESTS.md  Makefile  README.md  auth0_agentPrompt.md  package.json  pnpm-lock.yaml  setup.sh
.githooks/: pre-commit
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_milestone1_core_tables.py  0002_add_document_dedup_unique_indexes.py
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py  database.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/routers/: chat.py  collections.py  documents.py  health.py  ingest.py  users.py
apps/api/app/schemas/: __init__.py  common.py
apps/api/app/services/: collections.py  document_processor.py  documents.py  ingestion_worker.py  ingestion_worker_runner.py  users.py
apps/api/tests/: conftest.py  test_api_contracts_integration.py  test_collections_router.py  test_config.py  test_document_processor.py  test_documents_router.py  test_health_router.py  test_ingest_router.py  test_ingestion_worker_service.py
apps/web/: .eslintrc.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
